cmake_minimum_required(VERSION 3.0)

include_directories(. ../. .././External)
set(CMAKE_CXX_STANDARD 14)

if (WEB)
  add_definitions(-D_WEB)
  include_directories(.././External/Web)
  set(PLATFORM_SRC_Editor 
            )
elseif (MSVC)
  add_definitions(-D_WINDOWS)
  include_directories(.././External/Windows)
  set(PLATFORM_SRC_Editor 
            )
elseif (APPLE)
  add_definitions(-D_MACOS)
  include_directories(/usr/include/freetype2)
  set(PLATFORM_SRC_Editor 
            )
elseif (ANDROID)
  add_definitions(-D_ANDROID)
  include_directories(.././External/Android)
  set(PLATFORM_SRC_Editor 
            )
elseif (IOS)
  add_definitions(-D_IOS)
  include_directories(.././External/IOS)
  set(PLATFORM_SRC_Editor 
            )
elseif (UNIX)
  add_definitions(-D_LINUX)
  include_directories(/usr/include/freetype2)
  set(PLATFORM_SRC_Editor 
            )
endif()

set(GENERIC_SRC_Editor 
            ./AudioViewer.cpp
            ./ConfigEditor.cpp
            ./ConnectingDialog.cpp
            ./DocumentEditorBase.cpp
            ./DocumentEditorConfig.cpp
            ./DocumentEditorWidgetBase.cpp
            ./DocumentListValueWatcher.cpp
            ./DocumentServerThread.cpp
            ./DocumentSubValueListMirror.cpp
            ./DocumentValueWatcher.cpp
            ./DrawUtil.cpp
            ./DrawUtilQt.cpp
            ./EditorContainer.cpp
            ./EntityEditor.cpp
            ./FontViewer.cpp
            ./FrameEditorBase.cpp
            ./FrameEditorContainer.cpp
            ./FrameEditorLowerEdge.cpp
            ./FrameEditorMultiBox.cpp
            ./FrameEditorSingleBox.cpp
            ./FrameEditorSingleLine.cpp
            ./FrameEditorUtil.cpp
            ./GameClientWidget.cpp
            ./GameHostWidget.cpp
            ./GameServerWidget.cpp
            ./GenericCheckbox.cpp
            ./GenericFrame.cpp
            ./GenericInput.cpp
            ./GenericList.cpp
            ./GenericListFrame.cpp
            ./main.cpp
            ./MapEditor.cpp
            ./MapEditorAnchor.cpp
            ./MapEditorEffectLayer.cpp
            ./MapEditorEntityLayerManager.cpp
            ./MapEditorEntityManager.cpp
            ./MapEditorEntitySelector.cpp
            ./MapEditorLayerList.cpp
            ./MapEditorParalaxLayer.cpp
            ./MapEditorParalaxLayerManager.cpp
            ./MapEditorParalaxObjectSelector.cpp
            ./MapEditorPath.cpp
            ./MapEditorPathManager.cpp
            ./MapEditorSelector.cpp
            ./MapEditorServerObjectManager.cpp
            ./MapEditorServerObjectSelector.cpp
            ./MapEditorTileLayerManager.cpp
            ./MapEditorTileManager.cpp
            ./MapEditorTileSelector.cpp
            ./MapEditorToolAnchorCreate.cpp
            ./MapEditorToolAnchorEditor.cpp
            ./MapEditorToolAnchorMultiEditor.cpp
            ./MapEditorToolBase.cpp
            ./MapEditorToolEntityLayerDraw.cpp
            ./MapEditorToolEntityLayerSelect.cpp
            ./MapEditorToolManualTileLayerDraw.cpp
            ./MapEditorToolManualTileLayerPreview.cpp
            ./MapEditorToolManualTileLayerSelect.cpp
            ./MapEditorToolParalaxObjectLayerDraw.cpp
            ./MapEditorToolParalaxObjectLayerSelect.cpp
            ./MapEditorToolPathCreate.cpp
            ./MapEditorToolPathEditor.cpp
            ./MapEditorToolPathMultiEditor.cpp
            ./MapEditorToolServerObjectLayerDraw.cpp
            ./MapEditorToolServerObjectLayerSelect.cpp
            ./MapEditorToolVolumeCreate.cpp
            ./MapEditorToolVolumeEditor.cpp
            ./MapEditorToolVolumeMultiEditor.cpp
            ./MapEditorViewer.cpp
            ./MapEditorVolume.cpp
            ./MapEditorVolumeManager.cpp
            ./PropertyEditor.cpp
            ./PropertyEditorBool.cpp
            ./PropertyEditorEnum.cpp
            ./PropertyEditorFile.cpp
            ./PropertyEditorList.cpp
            ./PropertyEditorNumber.cpp
            ./PropertyEditorPolymorphic.cpp
            ./PropertyEditorString.cpp
            ./PropertyEditorStruct.cpp
            ./PropertyEditorWidget.cpp
            ./ScrollingPanel.cpp
            ./SelectFromListDialog.cpp
            ./ServerObjectEditor.cpp
            ./SimpleLabelListElement.cpp
            ./SpriteBaseAnimationEditor.cpp
            ./SpriteBaseAnimationEventEditorDialog.cpp
            ./SpriteBaseAnimationFrameListEditorDialog.cpp
            ./SpriteBaseAnimationListElement.cpp
            ./SpriteBaseAnimationListFrameElement.cpp
            ./SpriteBaseEditor.cpp
            ./SpriteBaseFrameDisplay.cpp
            ./SpriteBaseSkinEditor.cpp
            ./SpriteBaseSkinListElement.cpp
            ./SpriteBaseSkinListTextureElement.cpp
            ./SpriteBaseTextureEditor.cpp
            ./SpriteBaseTextureFrameElement.cpp
            ./SpriteBaseTextureFrameList.cpp
            ./SpriteBaseTextureImportDialog.cpp
            ./SpriteBaseTextureLoadList.cpp
            ./SpriteBaseTimeline.cpp
            ./SpriteBaseTimelineElement.cpp
            ./SpriteEditor.cpp
            ./TextureViewer.cpp
            ./TextureViewerWidget.cpp
            ./TileSheetEditor.cpp
            ./UIEditor.cpp
            ./UIEditorEquationList.cpp
            ./UIEditorNodeList.cpp
            ./UIEditorOutputEquationList.cpp
            ./UIEditorPropertyContainer.cpp
            ./UIEditorViewer.cpp
            ./UIEquationEditor.cpp
            ./UIOutputEquationEditor.cpp
            ./VisualEffectEditor.cpp
            ./VisualEffectEditorEquationList.cpp
            ./VisualEffectEditorNodeList.cpp
            ./VisualEffectEditorPropertyContainer.cpp
            ./VisualEffectEditorViewer.cpp
            ./VisualEffectEquationEditor.cpp
            ./GeneratedFiles/qrc_EditorContainer.cpp
            )
add_library(Editor ${GENERIC_SRC_Editor} ${PLATFORM_SRC_Editor} )