cmake_minimum_required(VERSION 3.1.0)

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/External)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
cmake_policy(SET CMP0071 OLD)
find_package(Qt5 REQUIRED COMPONENTS Core Widgets)
include_directories(${Qt5Widgets_INCLUDE_DIRS})
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(GENERIC_SRC_Editor 
            EditorGL.cpp
            SelectFromListDialog.cpp
            FontViewer.cpp
            TileSheetEditor.cpp
            MapEditorPathManager.cpp
            MapEditorToolServerObjectLayerSelect.cpp
            DocumentEditorWidgetBase.cpp
            PropertyEditorNumber.cpp
            MapEditorToolServerObjectLayerDraw.cpp
            TextureViewerWidget.cpp
            MapEditorVolume.cpp
            SpriteTextureImportDialog.ui
            SpriteBaseAnimationFrameListEditorDialog.cpp
            SpriteBaseTextureLoadList.cpp
            SpriteBaseSkinListElement.cpp
            MapEditorTileManager.cpp
            GameHostWidget.cpp
            PropertyEditorStruct.cpp
            MapEditorEntityManager.cpp
            DocumentEditorConfig.cpp
            UIEditor.cpp
            GenericFrame.cpp
            SpriteBaseTextureFrameElement.cpp
            SpriteBaseTextureFrameList.cpp
            VisualEffectEditorNodeList.cpp
            PropertyEditorWidget.cpp
            SpriteBaseTextureImportDialog.cpp
            UIEditorNodeList.cpp
            PropertyEditorPolymorphic.cpp
            SpriteBaseAnimationEventEditorDialog.cpp
            MapEditorToolManualTileLayerPreview.cpp
            DocumentServerThread.cpp
            UIEditorOutputEquationList.cpp
            GenericList.cpp
            EditorContainer.ui
            VisualEffectEditor.cpp
            MapEditorServerObjectManager.cpp
            SpriteBaseSkinListTextureElement.cpp
            MapEditorToolVolumeEditor.cpp
            ConnectingDialog.cpp
            DocumentValueWatcher.cpp
            DrawUtil.cpp
            MapEditorEntitySelector.cpp
            ConnectingDialog.ui
            MapEditorTypes.refl.cpp
            FrameEditorSingleLine.cpp
            SimpleLabelListElement.cpp
            VisualEffectEditorEquationList.cpp
            AnimationFrameEditor.ui
            SelectFromListDialog.ui
            ServerObjectEditor.cpp
            UIEquationEditor.cpp
            UIEditorEquationList.cpp
            FrameEditorSingleBox.cpp
            DocumentEditorBase.cpp
            MapEditorServerObjectSelector.cpp
            MapEditorToolEntityLayerDraw.cpp
            DrawUtilQt.cpp
            UIEditorViewer.cpp
            MapEditorToolAnchorCreate.cpp
            SpriteBaseAnimationListFrameElement.cpp
            FrameEditorBase.cpp
            MapEditorToolManualTileLayerDraw.cpp
            MapEditorToolPathMultiEditor.cpp
            GenericCheckbox.cpp
            SpriteBaseFrameDisplay.cpp
            TextureViewer.cpp
            MapEditorTileSelector.cpp
            SpriteEditor.cpp
            UIEditorPropertyContainer.cpp
            PropertyEditorFile.cpp
            MapEditorToolParalaxObjectLayerDraw.cpp
            MapEditorToolVolumeCreate.cpp
            PropertyEditorList.cpp
            MapEditorParalaxLayerManager.cpp
            TextInputDialog.cpp
            SpriteBaseTimeline.cpp
            EntityEditor.cpp
            PropertyEditorString.cpp
            MapEditorToolBase.cpp
            GameClientWidget.cpp
            MapEditorAnchor.cpp
            PropertyEditorBool.cpp
            PropertyEditorEnum.cpp
            GenericInput.cpp
            MapEditorSelector.cpp
            VisualEffectEditorViewer.cpp
            FrameEditorAnchorEditor.cpp
            SpriteBaseTimelineElement.cpp
            MapEditorViewer.cpp
            GameServerWidget.cpp
            MapEditorToolAnchorEditor.cpp
            SpriteBaseAnimationEditor.cpp
            FrameEditorLowerEdge.cpp
            MapEditorParalaxObjectSelector.cpp
            MapEditorToolAnchorMultiEditor.cpp
            ConfigEditor.cpp
            ScrollingPanel.cpp
            MapEditor.cpp
            MapEditorTileLayerManager.cpp
            PropertyEditor.cpp
            MapEditorToolVolumeMultiEditor.cpp
            MapEditorEffectLayer.cpp
            SpriteBaseAnimationListElement.cpp
            FrameEditorUtil.cpp
            EditorContainer.cpp
            FrameEditorMultiBox.cpp
            UIOutputEquationEditor.cpp
            DocumentListValueWatcher.cpp
            MapEditorVolumeManager.cpp
            MapEditorToolManualTileLayerSelect.cpp
            MapEditorPath.cpp
            SpriteBaseEditor.cpp
            MapEditorParalaxLayer.cpp
            VisualEffectEquationEditor.cpp
            MapEditorToolParalaxObjectLayerSelect.cpp
            MapEditorToolAllLayers.cpp
            SpriteBaseSkinEditor.cpp
            DocumentSubValueListMirror.cpp
            SpriteBaseTextureEditor.cpp
            GenericListFrame.cpp
            MapEditorLayerList.cpp
            MapEditorToolPathEditor.cpp
            VisualEffectEditorPropertyContainer.cpp
            FrameEditorAnchorManager.cpp
            MapEditorToolEntityLayerSelect.cpp
            FrameEditorContainer.cpp
            EditorContainer.qrc
            main.cpp
            MapEditorEntityLayerManager.cpp
            MapEditorToolPathCreate.cpp
            AudioViewer.cpp
            TextInputDialog.ui
            #CPP_PLACEHOLDER
            )
set(GENERIC_HEADER_Editor 
            DocumentEditorWidgetBase.h
            MapEditorEntitySelector.h
            MapEditorEffectLayer.h
            MapEditorToolEntityLayerDraw.h
            MapEditorServerObjectManager.h
            MapEditorToolAllLayers.h
            DrawUtil.h
            SpriteBaseAnimationEditor.h
            PropertyEditorStruct.h
            UIEditorOutputEquationList.h
            MapEditorToolPathMultiEditor.h
            MapEditorVolumeManager.h
            TextureViewer.h
            PropertyEditorString.h
            GameHostWidget.h
            MapEditorViewer.h
            ScrollingPanel.h
            UIEditorNode.h
            SpriteBaseTextureImportDialog.h
            VisualEffectEditorEquationList.h
            UIEditorViewer.h
            PropertyEditorEnum.h
            DocumentEditor.h
            MapEditorToolManualTileLayerDraw.h
            PropertyEditorList.h
            SpriteBaseTextureLoadList.h
            PropertyEditor.h
            DocumentSubValueListMirror.h
            ConnectingDialog.h
            MapEditorToolAnchorCreate.h
            DrawUtilQt.h
            PropertyEditorBool.h
            MapEditorToolVolumeCreate.h
            SimpleLabelListElement.h
            MapEditorToolAnchorMultiEditor.h
            MapEditorEntityManager.h
            MapEditorPath.h
            MapEditorPathManager.h
            AudioViewer.h
            TileSheetEditor.h
            SpriteBaseAnimationFrameListEditorDialog.h
            SpriteBaseTextureEditor.h
            VisualEffectEditor.h
            DocumentEditorConfig.h
            SpriteBaseTextureFrameList.h
            VisualEffectEquationEditor.h
            MapEditorAnchor.h
            GameClientWidget.h
            UIEditorEquationList.h
            EntityEditor.h
            FontViewer.h
            GenericListCreate.h
            GenericFrame.h
            UIEquationEditor.h
            SelectFromListDialog.h
            PropertyEditorFile.h
            MapEditorServerObjectSelector.h
            PropertyEditorWidget.h
            SpriteBaseAnimationListFrameElement.h
            EditorContainer.h
            MapEditorToolManualTileLayerPreview.h
            MapEditorToolManualTileLayerSelect.h
            MapEditorLayerManager.h
            UIEditorPropertyContainer.h
            FrameEditorAnchorManager.h
            TextInputDialog.h
            MapEditorToolEntityLayerSelect.h
            DocumentListValueWatcher.h
            FrameEditorAnchorEditor.h
            VisualEffectEditorViewer.h
            DocumentValueWatcher.h
            MapEditorToolPathCreate.h
            MapEditorTileManager.h
            MapEditorTypes.refl.h
            UIOutputEquationEditor.h
            MapEditorToolAnchorEditor.h
            SpriteBaseSkinListTextureElement.h
            MapEditorTileSelector.h
            GenericCheckbox.h
            MapEditorSelector.h
            FrameEditorSingleLine.h
            VisualEffectEditorPropertyContainer.h
            VisualEffectEditorNodeSelection.h
            SimpleLabelList.h
            FrameEditorContainer.h
            FrameEditorTypes.refl.h
            GameServerWidget.h
            SpriteBaseSkinEditor.h
            MapEditorToolParalaxObjectLayerSelect.h
            SpriteBaseEditor.h
            MapEditorToolPathEditor.h
            MapEditorToolParalaxObjectLayerDraw.h
            MapEditorEntityLayerManager.h
            PropertyEditorPolymorphic.h
            ConfigEditor.h
            UIEditor.h
            MapEditorParalaxLayer.h
            MapEditorLayerList.h
            FrameEditorLowerEdge.h
            GenericInput.h
            MapEditor.h
            SpriteEditor.h
            DocumentEditorBase.h
            SpriteBaseFrameDisplay.h
            FrameEditorTypes.refl.meta.h
            MapEditorVolume.h
            SpriteBaseAnimationEventEditorDialog.h
            DocumentServerThread.h
            SpriteBaseSkinListElement.h
            TextureViewerWidget.h
            UIEditorNodeList.h
            MapEditorToolVolumeEditor.h
            GenericListFrame.h
            MapEditorTypes.refl.meta.h
            SpriteBaseTimelineElement.h
            SpriteBaseAnimationListElement.h
            MapEditorParalaxObjectSelector.h
            MapEditorToolServerObjectLayerDraw.h
            FrameEditorSingleBox.h
            GenericList.h
            MapEditorToolVolumeMultiEditor.h
            SpriteBaseTextureFrameElement.h
            FrameEditorUtil.h
            MapEditorToolBase.h
            FrameEditorBase.h
            VisualEffectEditorNodeList.h
            MapEditorToolServerObjectLayerSelect.h
            ServerObjectEditor.h
            FrameEditorMultiBox.h
            MapEditorParalaxLayerManager.h
            PropertyEditorNumber.h
            MapEditorLayer.h
            MapEditorTileLayerManager.h
            SpriteBaseTimeline.h
            #HEADER_PLACEHOLDER
            )
set(GENERIC_REFL_Editor 
            MapEditorTypes.refl.h
            FrameEditorTypes.refl.h
            #REFL_PLACEHOLDER
            )

if (MSVC)
  add_definitions(-D_WINDOWS)
  include_directories(${PROJECT_SOURCE_DIR}/External/Windows)
  set(PLATFORM_SRC_Editor 
            )

set(PLATFORM_HEADER_Editor 
            )
endif()
if (WEB)
  add_definitions(-D_WEB)
  include_directories(${PROJECT_SOURCE_DIR}/External/Web)
  set(PLATFORM_SRC_Editor 
            )

set(PLATFORM_HEADER_Editor 
            )
endif()
if (IOS)
  add_definitions(-D_IOS)
  include_directories(${PROJECT_SOURCE_DIR}/External/IOS)
  set(PLATFORM_SRC_Editor 
            )

set(PLATFORM_HEADER_Editor 
            )
endif()
if (APPLE AND NOT IOS)
  add_definitions(-D_MACOS)
  include_directories(${PROJECT_SOURCE_DIR}/External/MacOS)
  include_directories(/usr/include/freetype2)
  set(PLATFORM_SRC_Editor 
            )

set(PLATFORM_HEADER_Editor 
            )
endif()
if (ANDROID)
  add_definitions(-D_ANDROID)
  include_directories(${PROJECT_SOURCE_DIR}/External/Android)
  set(PLATFORM_SRC_Editor 
            )

set(PLATFORM_HEADER_Editor 
            )
endif()
if (UNIX AND NOT APPLE)
  add_definitions(-D_LINUX)
  include_directories(${PROJECT_SOURCE_DIR}/External/Linux)
  include_directories(/usr/include/freetype2)
  set(PLATFORM_SRC_Editor 
            )

set(PLATFORM_HEADER_Editor 
            )
endif()

foreach(REFL_FILE ${GENERIC_REFL_Editor})
  string(REPLACE ".refl.h" ".refl.meta.h" META_FILE ${REFL_FILE})
  add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/${META_FILE}
                     COMMAND stormrefl ${CMAKE_CURRENT_SOURCE_DIR}/${REFL_FILE} -- -DSTORM_REFL_PARSE -D_CRT_SECURE_NO_WARNINGS -std=c++17 -x c++ -Wno-pragma-once-outside-header -I${CMAKE_CURRENT_SOURCE_DIR} -I${PROJECT_SOURCE_DIR} -I${PROJECT_SOURCE_DIR}/External -I${CLANG_HEADER_PATH}
                     MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/${REFL_FILE}
                     IMPLICIT_DEPENDS CXX ${CMAKE_CURRENT_SOURCE_DIR}/${REFL_FILE})
endforeach()

add_library(Editor ${GENERIC_SRC_Editor} ${PLATFORM_SRC_Editor}
            ${GENERIC_HEADER_Editor} ${PLATFORM_HEADER_Editor})